[tool.poetry]
name = "pyhatchbuck"
version = "0.2"
description = "Python library for Hatchbuck API"
authors = ["Jacob Senecal <jacob.senecal@gmail.com>"]
license = "MIT"
packages = [
    { include = "hatchbuck" }
]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
vcrpy = "^2.1"
six = "^1.12"
nose = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
